--- a/practica02/login.html
+++ b/practica02/login.html
@@ -1,12 +1,3 @@
-<script>
-	
-	// Si ya hemos iniciado sesion no podemos acceder al login y se redirige al index
-	if(sessionStorage.getItem("login")) 
-	{
-		window.location.replace('index.html');
-	} 
-</script>
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -16,6 +7,17 @@
 	<link rel="stylesheet" type="text/css" href="recursos/css/fontello.css">
 
 	<script src="javascript.js"></script>
+
+	<script>
+	
+		// Comprobamos si la variable login existe o no
+		// Si ya hemos iniciado sesion no podemos acceder al login y se redirige al index
+		if(sessionStorage.getItem("login")) 
+		{
+			window.location.replace('index.html');
+		} 
+		
+	</script>
 
 	<link rel="stylesheet" type="text/css" href="estilos/great.css" media="screen and (min-width: 981px)" />  <!-- Pantallas Grandes -->
 	<link rel="stylesheet" type="text/css" href="estilos/medium.css" media="screen and (min-width: 481px) and (max-width: 980px)" /> <!-- Pantallas Medianas -->
