--- a/practica02/favoritas.html
+++ b/practica02/favoritas.html
@@ -66,118 +66,14 @@
 	<h3>Tus fotos favoritas </h3>
 	<hr class="favorHR">
 	<div class="preview" > <!-- Fotos favoritas-->
-		<article>
-			<div class="contenedor">
-				<a href="foto.html">
-					<img src="recursos/Screenshot_20171128_183907.png" alt="Foto random de muestra" class="imagIndex" > 
-				</a>
-				<div class="textoImg">
-					<h4>Hackaton 2018</h4>
-					<p><span class="icon-thumbs-up"></span>15 <a title="Eliminar de favoritas" class="favorita" href="favoritas.html"><span class="icon-heart"></span></a>5 <span class="icon-comment-empty"></span>3</p>
-				</div>
-			</div>
-		</article>
 
-		<article>
-			<div class="contenedor">
-				<a href="foto.html">
-					<img src="recursos/gat2.jpg"  alt="Foto random de muestra" class="imagIndex" > 
-				</a>
-				<div class="textoImg">
-					<h4>Mi gato durmiendo</h4>
-					<p><span class="icon-thumbs-up"></span>5 <a title="Eliminar de favoritas" class="favorita" href="favoritas.html"><span class="icon-heart"></span></a>2 <span class="icon-comment-empty"></span>10</p>
-				</div>
-			</div>
-		</article>
+		<script>
+			
+			fotosFavoritas(); // Mostramos las fotos favoritas del usuario
+
+		</script>
+
 		
-		<article>
-			<div class="contenedor">
-				<a href="foto.html">
-					<img src="recursos/Screenshot_20171128_183907.png" alt="Foto random de muestra" class="imagIndex" > 
-				</a>
-				<div class="textoImg">
-					<h4>Hackaton 2018</h4>
-					<p><span class="icon-thumbs-up"></span>15 <a title="Eliminar de favoritas" class="favorita" href="favoritas.html"><span class="icon-heart"></span></a>5 <span class="icon-comment-empty"></span>3</p>
-				</div>
-			</div>
-		</article>
-
-		<article>
-			<div class="contenedor">
-				<a href="foto.html">
-					<img src="recursos/gat2.jpg"  alt="Foto random de muestra" class="imagIndex" > 
-				</a>
-				<div class="textoImg">
-					<h4>Mi gato durmiendo</h4>
-					<p><span class="icon-thumbs-up"></span>5 <a title="Eliminar de favoritas" class="favorita" href="favoritas.html"><span class="icon-heart"></span></a>2 <span class="icon-comment-empty"></span>10</p>
-				</div>
-			</div>
-		</article>
-
-		<article>
-			<div class="contenedor">
-				<a href="foto.html">
-					<img src="recursos/Screenshot_20171128_183907.png" alt="Foto random de muestra" class="imagIndex" > 
-				</a>
-				<div class="textoImg">
-					<h4>Hackaton 2018</h4>
-					<p><span class="icon-thumbs-up"></span>15 <a title="Eliminar de favoritas" class="favorita" href="favoritas.html"><span class="icon-heart"></span></a>5 <span class="icon-comment-empty"></span>3</p>
-				</div>
-			</div>
-		</article>
-
-		<article>
-			<div class="contenedor">
-				<a href="foto.html">
-					<img src="recursos/gat2.jpg"  alt="Foto random de muestra" class="imagIndex" > 
-				</a>
-				<div class="textoImg">
-					<h4>Mi gato durmiendo</h4>
-					<p><span class="icon-thumbs-up"></span>5 <a title="Eliminar de favoritas" class="favorita" href="favoritas.html"><span class="icon-heart"></span></a>2 <span class="icon-comment-empty"></span>10</p>
-				</div>
-			</div>
-		</article>
-
-		<article>
-			<div class="contenedor">
-				<a href="foto.html">
-					<img src="recursos/Screenshot_20171128_183907.png" alt="Foto random de muestra" class="imagIndex" > 
-				</a>
-				<div class="textoImg">
-					<h4>Hackaton 2018</h4>
-					<p><span class="icon-thumbs-up"></span>15 <a title="Eliminar de favoritas" class="favorita" href="favoritas.html"><span class="icon-heart"></span></a>5 <span class="icon-comment-empty"></span>3</p>
-				</div>
-			</div>
-		</article>
-
-		<article>
-			<div class="contenedor">
-				<a href="foto.html">
-					<img src="recursos/gat2.jpg"  alt="Foto random de muestra" class="imagIndex" > 
-				</a>
-				<div class="textoImg">
-					<h4>Mi gato durmiendo</h4>
-					<p><span class="icon-thumbs-up"></span>5 <a title="Eliminar de favoritas" class="favorita" href="favoritas.html"><span class="icon-heart"></span></a>2 <span class="icon-comment-empty"></span>10</p>
-				</div>
-			</div>
-		</article>
-		
-
-		<article>
-			<div class="contenedor">
-				<div class="autorBox">
-					<p><a class="enlaces" title="Buscar por autor" href="buscar.html">Vayne</a> <b>|</b> <a class="enlaces" title="Buscar por etiquetas" href="buscar.html">#juegos</a> <a class="enlaces" title="Buscar por etiquetas" href="buscar.html">#cyberpunk</a><a class="enlaces" href="buscar.html"> #2077</a></p>
-				</div>
-				<a title="Ver foto" href="foto.html">
-					<img src="recursos/cyberpunk.jpg"  alt="Foto random de muestra" class="imagIndex" > 
-				</a>
-				<div class="textoImg">
-					<h4>Juegazo</h4>
-					<p><span class="icon-thumbs-up"></span>100 <a title="Eliminar de favoritas" class="favorita" href="favoritas.html"><span class="icon-heart"></span></a>50 <span class="icon-comment-empty"></span>20</p>
-				</div>
-			</div>
-		</article>
-
 		</div>
 
 	<div  class="preview">
