--- a/ejemplos/ej1.html
+++ b/ejemplos/ej1.html
@@ -6,6 +6,15 @@
 	<title>Document</title>
 	<link rel="stylesheet" type="text/css" href="estilo1.css">
 	<script src="java1.js"></script>  <!-- El type solo es necesario si el fichero es distinto a javasript -->
+
+	<script>
+		
+		if(!sessionStorage['usuario'])  // Si no existe en el sessionStorage la variable usuario
+		{
+			//location.href = 'http://localhost/pcw/practica02/index.html'; // Redirigimos a otra pagina.
+		}
+
+	</script>
 </head>
 <body>
 
@@ -20,10 +29,20 @@
 		<div></div>
 
 		<form onsubmit="return hacerLogin(this);">  <!-- Pasamos el formulario como entrada de la funcion -->
-			<div><label>Login</label><input type="text" name="login"></div>
+			<div><label>Login</label><input type="text" name="login" onblur="mostrarValor(this);"></div>  <!-- Cuando dejamos de hacer focus al campo se llama a la funcion -->
 			<div><label>PWD</label><input type="password" name="pwd"></div>
-			<div><input type="submit" value="enviar"></div>
+			<div><label>Etiquetas</label><input type="text" list="etiquetas" onfocus="pedirEtiquetas();"></div>
+			<datalist id="etiquetas"></datalist>
+			<div><input type="submit" value="enviar"><input type="reset" value="restaurar"></div>
 		</form>
+	</section>
+
+	<section id="ff">
+		<h2>Fotos favoritas</h2>
+		<div></div>
+		<footer>
+			<button onclick="pedirFavoritas();">Pedir favoritas</button>
+		</footer>
 	</section>
 </body>
 </html>
