Mostrar datos foto con ID url y check ID correcto

--- a/practica02/foto.html
+++ b/practica02/foto.html
@@ -54,24 +54,15 @@
 	</header>
 	
 		<div id="foto">
-			<article>
-				<figure>
-					<div>
-						<img src="recursos/gat2.jpg" alt="Foto con mas detalle" class="imagen2">
-					</div>
-					<figcaption>
-						<h2>Mi gato durmiendo</h2>
-						<hr class="LineaFoto">
-						<p class="info"><a class="enlacesFoto" title="Me gusta la foto" href=""><span class="icon-thumbs-up"></span></a>5 <a class="enlacesFoto" title="Añadir a favoritas" href=""><span class="icon-heart-empty"></span></a>2 <a class="enlacesFoto" title="Seccion comentarios de la Foto" href="#comentarios"><span class="icon-comment-empty"></span></a>10</p>
-						<p class="info">Dimensiones: 959x720 pixeles</p>
-						<p class="info">Peso: 679,1Mb</p>
-						<div>
-							<p class="autor"> <a class="enlaces" title="Buscar fotos por etiqueta" href="buscar.html">#gatos</a> <a class="enlaces" title="Buscar fotos por etiqueta" href="buscar.html">#animales</a></p>
-							<p>Por <a href="buscar.html" title="Buscar fotos por usuario" class="enlaces" >Murlock</a></p>
-						</div>
-					</figcaption>
-				</figure>
-			</article>
+			<article id="fotoID">
+				
+				<script>
+					
+					mostrarFoto();  // Mostrar la foto en funcion de la ID de la url
+
+				</script>
+
+			</article> 
 
 
 			<h3 id="comentarios">Comentarios</h3> <!-- Seccion de comentarios de la foto -->
