Etiquetas desde base de datos y pasado valores desde index a buscar

--- a/practica02/acerca.html
+++ b/practica02/acerca.html
@@ -14,7 +14,7 @@
 <body>
 	<header> <!-- Titulo pagina y descripcion -->
 		<div id="headerItems">
-			<a class="none" title="Volver a la pagina principal" href="index.html">
+			<a class="none" title="Volver a la pagina principal" href="index.html?1">
 				<div class="titulo"><h1>Instagrom</h1></div>
 				<div><h2>Las mejores fotos</h2></div>
 			</a>
@@ -40,7 +40,7 @@
 				</script>
 
 				<ul id="menu2"> 
-					<li><a href="index.html"><span class="icon-home"></span></a></li> 
+					<li><a href="index.html?1"><span class="icon-home"></span></a></li> 
 					<li><a href="buscar.html"><span class="icon-search"></span></a></li> 
 				<!--	<li><a href="nueva.html"><span class="icon-camera"></span></a></li>
 					<li><a href="favoritas.html"><span class="icon-heart"></span></a></li> 
