--- a/practica02/foto.html
+++ b/practica02/foto.html
@@ -16,7 +16,7 @@
 <body>
 	<header> <!-- Titulo pagina y descripcion -->
 		<div id="headerItems">
-			<a class="none" title="Volver a la pagina principal" href="index.html">
+			<a class="none" title="Volver a la pagina principal" href="index.html?1">
 				<div class="titulo"><h1>Instagrom</h1></div>
 				<div><h2>Las mejores fotos</h2></div>
 			</a>
@@ -28,7 +28,7 @@
 		<input type="checkbox" id="ckburger" checked>  <!-- Boton para visualizar/no visualizar el menu hamburguesa -->
 			<nav class="menu display-mini display-great"> <!-- Barra de navegacion tamaño grande y pequeño-->
 				<ul id="menu"> <!-- Lista no ordenada -->
-					<li><a href="index.html"><span class="icon-home"></span>Inicio</a></li> 
+					<li><a href="index.html?1"><span class="icon-home"></span>Inicio</a></li> 
 					<li><a href="buscar.html"><span class="icon-search"></span>Busqueda</a></li> <!-- Buscar una foto -->
 				</ul>
 			</nav>
@@ -42,7 +42,7 @@
 				</script>
 
 				<ul id="menu2"> 
-					<li><a href="index.html"><span class="icon-home"></span></a></li> 
+					<li><a href="index.html?1"><span class="icon-home"></span></a></li> 
 					<li><a href="buscar.html"><span class="icon-search"></span></a></li> 
 				<!--	<li><a href="nueva.html"><span class="icon-camera"></span></a></li>
 					<li><a href="favoritas.html"><span class="icon-heart"></span></a></li> 
