Indicador megusta/fav usuario en index.html

--- a/practica02/foto.html
+++ b/practica02/foto.html
@@ -68,38 +68,13 @@
 			<h3 id="comentarios">Comentarios</h3> <!-- Seccion de comentarios de la foto -->
 			<article>
 				<ul id="lista-coment">
-					<li>
-						<div class="coment-box">
-							<div class="coment-head">
-								<h5>Igualito al mio</h5>
-								<span>10-enero-2017, 9:32h</span>
-							</div>
-							<div class="coment-content">
-								<p>Ese gato es igualito la mio!</p>
-								<p><a href="buscar.html" title="Buscar fotos por usuario" class="enlaces" >Roxo95</a></p>
-							</div>
-						</div>
-					</li>
-					
-					<li>
-						<div class="coment-box">
-							<div class="coment-head">
-								<h5>Comentario de prueba</h5>
-								<p>5-marzo-2017, 18:25h</p>
-							</div>
-							<div class="coment-content">
-								<p>Comentario de prueba.Comentario de prueba.Comentario de prueba.Comentario de prueba.Comentario de prueba.
-								Comentario de prueba.Comentario de prueba.Comentario de prueba.Comentario de prueba.</p>
-								<p><a href="buscar.html" title="Buscar fotos por usuario" class="enlaces" >Street_fighter95</a></p>
-							</div>
-						</div>
-					</li>
+				<script>
+					mostrarComentarios(); 	// Para mostrar los comentarios de la fotos
+				</script>
 
 				</ul>
 
 			</article>
-
-
 		</div>
 	
 	<footer>
