Comentarios foto visualmente mal

--- a/practica02/buscar.html
+++ b/practica02/buscar.html
@@ -75,157 +75,12 @@
 	</section>
 
 	<div class="preview" > <!-- 9 fotos mejor valoradas -->
-		
-		<article>
-			<div class="contenedor">
-				<div class="autorBox">
-					<p><a class="enlaces" href="buscar.html">Roxo95</a> <b>|</b> <a class="enlaces" href="buscar.html">#hackaton</a> <a class="enlaces" href="buscar.html">#2018</a></p>
-				</div>
-				<a href="foto.html">
-					<img src="recursos/Screenshot_20171128_183907.png" alt="Foto random de muestra" class="imagIndex" > 
-				</a>
-				<div class="textoImg">
-					<h4>Hackaton 2018</h4>
-					<p><span class="icon-thumbs-up"></span>15 <span class="icon-heart-empty"></span>5 <span class="icon-comment-empty"></span>3</p>
-				</div>
-			</div>
-		</article>
+		<h2>Resultados búsqueda</h2>
 
-		<article>
-			<div class="contenedor">
-				<div class="autorBox">
-					<p><a class="enlaces" href="buscar.html">Murlock</a> <b>|</b> <a class="enlaces" href="buscar.html">#gatos</a> <a class="enlaces" href="buscar.html">#animales</a></p>
-				</div>
-				<a href="foto.html">
-					<img src="recursos/gat2.jpg"  alt="Foto random de muestra" class="imagIndex" > 
-				</a>
-				<div class="textoImg">
-					<h4>Mi gato durmiendo</h4>
-					<p><span class="icon-thumbs-up"></span>5 <span class="icon-heart-empty"></span>2 <span class="icon-comment-empty"></span>10</p>
-				</div>
-			</div>
-		</article>
-
-		<article>
-			<div class="contenedor">
-				<div class="autorBox">
-					<p><a class="enlaces" href="buscar.html">Roxo95</a> <b>|</b> <a class="enlaces" href="buscar.html">#hackaton</a> <a class="enlaces" href="buscar.html">#2018</a></p>
-				</div>
-				<a href="foto.html">
-					<img src="recursos/Screenshot_20171128_183907.png" alt="Foto random de muestra" class="imagIndex" > 
-				</a>
-				<div class="textoImg">
-					<h4>Hackaton 2018</h4>
-					<p><span class="icon-thumbs-up"></span>15 <span class="icon-heart-empty"></span>5 <span class="icon-comment-empty"></span>3</p>
-				</div>
-			</div>
-		</article>
-
-		<article>
-			<div class="contenedor">
-				<div class="autorBox">
-					<p><a class="enlaces" href="buscar.html">Murlock</a> <b>|</b> <a class="enlaces" href="buscar.html">#gatos</a> <a class="enlaces" href="buscar.html">#animales</a></p>
-				</div>
-				<a href="foto.html">
-					<img src="recursos/gat2.jpg"  alt="Foto random de muestra" class="imagIndex" > 
-				</a>
-				<div class="textoImg">
-					<h4>Mi gato durmiendo</h4>
-					<p><span class="icon-thumbs-up"></span>5 <span class="icon-heart-empty"></span>2 <span class="icon-comment-empty"></span>10</p>
-				</div>
-			</div>
-		</article>
-
-		<article>
-			<div class="contenedor">
-				<div class="autorBox">
-					<p><a class="enlaces" href="buscar.html">Roxo95</a> <b>|</b> <a class="enlaces" href="buscar.html">#hackaton</a> <a class="enlaces" href="buscar.html">#2018</a></p>
-				</div>
-				<a href="foto.html">
-					<img src="recursos/Screenshot_20171128_183907.png" alt="Foto random de muestra" class="imagIndex" > 
-				</a>
-				<div class="textoImg">
-					<h4>Hackaton 2018</h4>
-					<p><span class="icon-thumbs-up"></span>15 <span class="icon-heart-empty"></span>5 <span class="icon-comment-empty"></span>3</p>
-				</div>
-			</div>
-		</article>
-
-		<article>
-			<div class="contenedor">
-				<div class="autorBox">
-					<p><a class="enlaces" href="buscar.html">Murlock</a> <b>|</b> <a class="enlaces" href="buscar.html">#gatos</a> <a class="enlaces" href="buscar.html">#animales</a></p>
-				</div>
-				<a href="foto.html">
-					<img src="recursos/gat2.jpg"  alt="Foto random de muestra" class="imagIndex" > 
-				</a>
-				<div class="textoImg">
-					<h4>Mi gato durmiendo</h4>
-					<p><span class="icon-thumbs-up"></span>5 <span class="icon-heart-empty"></span>2 <span class="icon-comment-empty"></span>10</p>
-				</div>
-			</div>
-		</article>
-
-		<article>
-			<div class="contenedor">
-				<div class="autorBox">
-					<p><a class="enlaces" href="buscar.html">Roxo95</a> <b>|</b> <a class="enlaces" href="buscar.html">#hackaton</a> <a class="enlaces" href="buscar.html">#2018</a></p>
-				</div>
-				<a href="foto.html">
-					<img src="recursos/Screenshot_20171128_183907.png" alt="Foto random de muestra" class="imagIndex" > 
-				</a>
-				<div class="textoImg">
-					<h4>Hackaton 2018</h4>
-					<p><span class="icon-thumbs-up"></span>15 <span class="icon-heart-empty"></span>5 <span class="icon-comment-empty"></span>3</p>
-				</div>
-			</div>
-		</article>
-
-		<article>
-			<div class="contenedor">
-				<div class="autorBox">
-					<p><a class="enlaces" href="buscar.html">Murlock</a> <b>|</b> <a class="enlaces" href="buscar.html">#gatos</a> <a class="enlaces" href="buscar.html">#animales</a></p>
-				</div>
-				<a href="foto.html">
-					<img src="recursos/gat2.jpg"  alt="Foto random de muestra" class="imagIndex" > 
-				</a>
-				<div class="textoImg">
-					<h4>Mi gato durmiendo</h4>
-					<p><span class="icon-thumbs-up"></span>5 <span class="icon-heart-empty"></span>2 <span class="icon-comment-empty"></span>10</p>
-				</div>
-			</div>
-		</article>
-
-		<article>
-			<div class="contenedor">
-				<div class="autorBox">
-					<p><a class="enlaces" title="Buscar por autor" href="buscar.html">Vayne</a> <b>|</b> <a class="enlaces" title="Buscar por etiquetas" href="buscar.html">#juegos</a> <a class="enlaces" title="Buscar por etiquetas" href="buscar.html">#cyberpunk</a><a class="enlaces" href="buscar.html"> #2077</a></p>
-				</div>
-				<a title="Ver foto" href="foto.html">
-					<img src="recursos/cyberpunk.jpg"  alt="Foto random de muestra" class="imagIndex" > 
-				</a>
-				<div class="textoImg">
-					<h4>Juegazo</h4>
-					<p><span class="icon-thumbs-up"></span>100 <span class="icon-heart-empty"></span>50 <span class="icon-comment-empty"></span>20</p>
-				</div>
-			</div>
-		</article>
-
-		</div>
+	</div>
 
 	<div  class="preview">
 	
-		<ul class="paginacion">
-			<li><a href="#">«</a></li>
-			<li><a href="#">1</a></li>
-			<li><a class="active" href="#">2</a></li>
-			<li><a href="#">3</a></li>
-			<li><a href="#">4</a></li>
-			<li><a href="#">5</a></li>
-			<li><a href="#">6</a></li>
-			<li><a href="#">7</a></li>
-			<li><a href="#">»</a></li>
-		</ul>
 	</div>
 
 	<footer>
@@ -236,6 +91,8 @@
 	<script>
 
 		mostrarMenu(); 			// Para mostrar el menu determinado en funcion de si el usuario esta logeado o no (version mini/grande)
+
+		checkBusqueda(); 		// Comprobar si se pasa algun valor por la url y realizar la busqueda correspondiente
 
 	</script>
 	
