--- a/practica02/foto.html
+++ b/practica02/foto.html
@@ -46,7 +46,7 @@
 				</script>
 
 				<ul id="menu2"> 
-					<li><a href="index.html"><span class="icon-home"></span></a></li> 
+					<li><a href="index.html?1"><span class="icon-home"></span></a></li> 
 					<li><a href="buscar.html"><span class="icon-search"></span></a></li> 
 					<li><form action="buscar.html" method="post" onsubmit="return barraBusqueda();">  <!-- Buscador -->
 						<input type="search" id="brbar" name="buscador" placeholder='Buscar... '>
