--- a/practica02/acerca.html
+++ b/practica02/acerca.html
@@ -5,7 +5,9 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1.0" /> <!-- Para que se pueda aplicar un diseño adaptable y la correcta visualizacion en dispo móviles -->
 	<link rel="stylesheet" type="text/css" href="estilos/estiloPrincipal.css">
 	<link rel="stylesheet" type="text/css" href="recursos/css/fontello.css">
-
+	
+	<script src="javascript.js"></script>
+	
 	<link rel="stylesheet" type="text/css" href="estilos/great.css" media="screen and (min-width: 981px)" />  <!-- Pantallas Grandes -->
 	<link rel="stylesheet" type="text/css" href="estilos/medium.css" media="screen and (min-width: 481px) and (max-width: 980px)" /> <!-- Pantallas Medianas -->
 	<link rel="stylesheet" type="text/css" href="estilos/mini.css" media="screen and (max-width: 480px)" /> <!-- Pantallas Pequeñas (Móviles) -->
@@ -24,29 +26,10 @@
 			</span>
 		</div>
 		<input type="checkbox" id="ckburger" checked>  <!-- Boton para visualizar/no visualizar el menu hamburguesa -->
-			<nav class="menu display-mini display-great"> <!-- Barra de navegacion tamaño grande y pequeño-->
+			<nav> <!-- Barra de navegacion tamaño grande y pequeño-->
 				<ul id="menu"> <!-- Lista no ordenada -->
-					<li><a href="index.html?1"><span class="icon-home"></span>Inicio</a></li> 
-					<li><form action="buscar.html" method="post" onsubmit="return barraBusqueda();">  <!-- Buscador -->
-						<input type="search" id="brbar" name="buscador" placeholder='Buscar... '>
-						<input type="submit" id="brbutton" name="buscador" value="🔍" >
-					</form>
-					</li>
-				</ul>
-			</nav>
-
-			<nav class="display-medium"> <!-- Barra de navegacion tamaño mediano-->
-				
-				<script>
-
-					//mostrarMenu2(); 			// Para mostrar el menu determinado en funcion de si el usuario esta logeado o no (version mediana)
-
-				</script>
-
-				<ul id="menu2"> 
-					<li><a href="index.html"><span class="icon-home"></span></a></li> 
-					<li><a href="buscar.html"><span class="icon-search"></span></a></li> 
-					<li><form action="buscar.html" method="post" onsubmit="return barraBusqueda();">  <!-- Buscador -->
+					<li><a href="index.html?1"><span class="icon-home"></span><span class="menu display-mini display-great">Inicio</span></a></li> 
+					<li><form action="buscar.html?1" method="post" onsubmit="return barraBusqueda();">  <!-- Buscador -->
 						<input type="search" id="brbar" name="buscador" placeholder='Buscar... '>
 						<input type="submit" id="brbutton" name="buscador" value="🔍" >
 					</form>
