Buscar practicamente terminado

--- a/practica02/buscar.html
+++ b/practica02/buscar.html
@@ -78,7 +78,7 @@
 
 		mostrarMenu(); 			// Para mostrar el menu determinado en funcion de si el usuario esta logeado o no (version mini/grande)
 
-		checkBusqueda(); 		// Comprobar si se pasa algun valor por la url y realizar la busqueda correspondiente
+		checkBusqueda(document.getElementById('buscador')); 		// Comprobar si se pasa algun valor por la url y realizar la busqueda correspondiente
 
 	</script>
 	
