--- a/practica02/index.html
+++ b/practica02/index.html
@@ -29,7 +29,7 @@
 			<nav> <!-- Barra de navegacion tamaño grande y pequeño-->
 				<ul id="menu"> <!-- Lista no ordenada -->
 					<li><a href="index.html?1"><span class="icon-home"></span><span class="menu display-mini display-great">Inicio</span></a></li> 
-					<li><form action="buscar.html?1" method="post" onsubmit="return barraBusqueda();">  <!-- Buscador -->
+					<li><form action="buscar.html" method="post" onsubmit="return barraBusqueda();">  <!-- Buscador -->
 						<input type="search" id="brbar" name="buscador" placeholder='Buscar... '>
 						<input type="submit" id="brbutton" name="buscador" value="🔍" >
 					</form>
