--- a/practica02/login.html
+++ b/practica02/login.html
@@ -53,7 +53,7 @@
 	<div id="myModal" class="modal">
 
 		<div class="modal-content">
-		    <span class="close" onclick="cerrarVentana();">&times;</span>
+		    <span class="close" onclick="cerrarVentana(1);">&times;</span>
 		    <p class="error" >¡<span>ERROR</span>! Login o contraseña incorrectos.</p>
 		</div>
 
