Corrección algunos errores y rellenado acerca

--- a/practica02/acerca.html
+++ b/practica02/acerca.html
@@ -41,11 +41,13 @@
 	<section class="preview" > <!-- 9 fotos mejor valoradas -->
 		<fieldset class="acerca">
 			<h2>Información acerca de Instagrom</h2>
-			<p>Esta página ha sido realizada para la practica 1 de la asignatura de <b>Programación del Cliente
+			<p>Esta página ha sido realizada para la practica 2 de la asignatura de <b>Programación del Cliente
 			Web</b>, la cual pertenece al 2º curso de la titulación del Grado en Ingeniería Multimedia.</p>
-			<p>Las partes <b>que no se han realizado </b>son las siguientes: Añadir Comentario en Foto.html,
-			agrandar imagen en foto.html, seleccionar imagen en Nueva.html no esta realizado correctamente, controlar
-			que el login no empiece por numero en registro.html, que las nuevas etiquetas de la foto aparezcan encima del input de Etiquetas en nueva.html. </p>
+			<p>Las partes <b>que no se han realizado </b>son las siguientes: Publicar comentario en 
+			foto.html, mostrar o no el formulario de publicar comentario en función de si el usuario 
+			de está logeado o no, mostrar las etiquetas encima del input de etiquetas en nueva.html,
+			mostrar la foto a subir en foto.html cuando esta tiene un tamaño menor de 300kb y la 
+			paginación no funciona al 100% en buscar.  </p>
 			<p>Realizada por <b>Alejandro Roca Vande Sype</b> DNI <b>48828691J</b>.</p>
 			<p>Correo: <b>roca-vandesype@hotmail.com</b> Grupo: <b>Miercoles, de 15h a 17h.</b></p>
 		</fieldset>
