--- a/practica02/registro.html
+++ b/practica02/registro.html
@@ -63,7 +63,7 @@
 		<fieldset class="marcoForms">
 			<form action="login.html" method="post" onsubmit="return registroUsuario(this);"> <!-- Fourmulario de login -->
 				<h2>Registro</h2>
-				<p><input class="boxesForm" type="text" name="login" onblur="checkLogin(this)"; placeholder="Login" pattern="[a-zA-Z0-9]{4,20}" title="Debe estar enre 4 y 20 caracteres, solo puede contener números y letras, y no puede empezar por un número" required autofocus> </p>
+				<p><input class="boxesForm" type="text" name="login" onblur="checkLogin(this);" placeholder="Login" pattern="[a-zA-Z0-9]{4,20}" title="Debe estar enre 4 y 20 caracteres, solo puede contener números y letras, y no puede empezar por un número" required autofocus> </p>
 				<div class="loginCheck"></div>
 				<p><input class="boxesForm" type="password" name="pwd" placeholder="Contraseña" pattern="[a-zA-Z0-9_]{6,20}" title="Debe estar enre 6 y 20 caracteres" required> </p>
 				<p><input class="boxesForm" type="password" name="pwd2" placeholder="Confirmar contraseña" > </p>
