--- a/practica03/index.html
+++ b/practica03/index.html
@@ -3,24 +3,50 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" /> <!-- Para que se pueda aplicar un diseño adaptable y la correcta visualizacion en dispo móviles -->
+	<script src="javascript.js"></script>
 	<link rel="stylesheet" type="text/css" href="estilos/estilo.css">
 	<title>1010</title>
 </head>
 <body>
 	<header> <!-- Titulo pagina y descripcion -->
 		<div id="headerItems">
-			<div class="titulo"><h1>GAMES4LIFE</h1></div>
+			<a class="none" title="Volver a la pagina principal" href="index.html">
+				<div class="titulo"><h1>GAMES4LIFE</h1></div>
+			</a>
 			<div><h3 id="descripcion" >Coloca las piezas de forma correcta para completar filas y hacerlas eliminar</h3></div>
 		</div>
 	</header>
 
-
-
+	<section id="panelJuego">
+		<h2>Panel de juego</h2>
+		<div id="puntuacion">
+			<p><strong>Puntuacion:</strong> O</p>
+		</div>
+		<canvas id="zonaJuego"></canvas>
+	</section>
+	
+	<section id="zonaPiezas">
+		<h2>Piezas disponibles</h2>
+		<canvas id="pieza1"></canvas>
+		<canvas id="pieza2"></canvas>
+		<canvas id="pieza3"></canvas>
+	</section>
 
 	<footer>
 		<!-- Copyright e informacion de contacto-->
 		<p><a class="enlaces" href="acerca.html"><strong>Alejandro Roca Vande Sype</strong></a> | &copy; Abril 2019</p>
 	</footer>
+
+
+	<script>
+		
+		ajustarTam(); 							// Ajustamos tam zona juego
+		crearZona('zonaJuego', 10); 			// Realizacmos las divisones de las casillas para la zona
+		crearZona('pieza1', 5);
+		crearZona('pieza2', 5);
+		crearZona('pieza3', 5);
+
+	</script>
 	
 </body>
 </html>
